--- a/src/pages/Marketplace/Marketplace.scss
+++ b/src/pages/Marketplace/Marketplace.scss
@@ -19,6 +19,6 @@
   td{
     padding: 10px 15px;
     text-align: center;
-    border: 1px solid rgba(128, 128, 128, 0.45);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.45);
   }
 }
