--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -2,6 +2,7 @@
   width: 30%;
   padding: 25px 20px 10px;
   box-shadow: 0 10px 15px -3px rgba(38, 44, 49, 0.2);
+  border: 1px solid rgba(119, 136, 153, 0.3);
   border-radius: 9px;
   text-align: center;
   background-color: rgba(121, 181, 204, 0.2);
