--- a/src/pages/Marketplace/Marketplace.scss
+++ b/src/pages/Marketplace/Marketplace.scss
@@ -6,7 +6,7 @@
     background-color: rgb(29, 106, 185);
     color: #ececec;
   }
-  tr{
+  .table-row{
     &:hover{
       background-color: rgba(211, 211, 211, 0.5);
     }
